NEWS: contributors for 2.6.2, 2 more bugfixes

--- a/NEWS
+++ b/NEWS
@@ -7,8 +7,10 @@ Banshee 2.6.2 - 2014-__-__
     Minor enhancements:
       * Add basic AppData file for inclusion in open source app stores
 
-    Notable Bugs Fixed (13 fixed since 2.6.1):
+    Notable Bugs Fixed (15 fixed since 2.6.1):
 
+      * bgo#679938: [gapless] Repeat always on
+      * bgo#674293: [gapless] Banshee ignores "stop when finished"
       * bgo#621222: [gapless] Playcount shouldn't be incremented as soon as song plays
       * bgo#722947: prevent a crash when dealing with Nexus4
       * bgo#722731: avoid highlighting wrong track after invalid track was played
@@ -68,11 +70,12 @@ Contributors For This Release
     The following people directly contributed to the release of this version
     of Banshee. Without their help, there would be no release!
 
-     Aaron Borden, Andres G. Aragoneses, Bertrand Lorentz, Hans Peter Jansson,
-     IBBoard, James Boocock, Nicholas Little, Phil Trimble, Sindhu S
+     Andres G. Aragoneses, Michael Catanzaro, Roderich Schupp, Timo Dörr
 
     The following people contributed updated translations to this release.
     Without them, our project's reach would be much more limited.
 
-     Alexandre Franke, Andika Triwidada, Rafael Ferreira, Wolfgang Stöggl
-     
+     Andika Triwidada, Aurimas Černius, Balázs Úr, Benjamin Steinwender,
+     Enrico Nicoletto, Daniel Mustieles, Dimitris Spingos, Marek Černocký,
+     Matej Urbančič, Piotr Drąg, Rūdolfs Mazurs, Seong-ho Cho
+
