--- a/AUTHORS
+++ b/AUTHORS
@@ -135,6 +135,7 @@ Contributors:
   Martin Pitt
   Matt Enright
   Matt Sturgeon
+  Michael Catanzaro
   Michael Kaiser
   Michael Martin-Smucker
   Michael Monreal
@@ -168,6 +169,7 @@ Contributors:
   Pratik Patel
   Przemysław Grzegorczyk
   Raimo Radczewski
+  Roderich Schupp
   Robin Stocker
   Roderich Schupp
   Rodney Dawes
