NEWS et-al: pre-release 2.9.1 changes

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,7 @@ Contributors:
   Andrea Cimitan
   Andreas Neustifter
   Andrew Conkling
+  Andrey Gankov
   Andrés G. Aragoneses
   Andy Midgette
   Andy Street
@@ -70,6 +71,7 @@ Contributors:
   Diego E. Pettenò
   Diego Fernandez
   Dinh Ngoc Tu
+  Dmitriy Petukhov
   Dougal Stanton
   Dustin C. Hatch
   Eitan Isaacson
@@ -130,13 +132,16 @@ Contributors:
   Lauri Kotilainen
   Lukas Lipka
   Mackenan Grassi
+  Marcin Kolny
   Marijn Ros
   Mark Busby
   Mark Saunders
   Martin Pitt
   Matt Enright
   Matt Sturgeon
+  Michael Catanzaro
   Michael Farrell
+  Michael Foster
   Michael Kaiser
   Michael Martin-Smucker
   Michael Monreal
@@ -144,6 +149,7 @@ Contributors:
   Miguel de Icaza
   Mike Gemünde
   Mike Urbanski
+  Mirco Bauer
   Moritz Schallaböck
   Nathan Palmer
   Neil Loknath
@@ -182,6 +188,7 @@ Contributors:
   Sebastian Dröge
   Shaun McCance
   Sjoerd Simons
+  Stephan Sundermann
   Tim Fisken
   Tim Yamin
   Timo Dörr
