NEWS: fix typo in authors list

--- a/NEWS
+++ b/NEWS
@@ -134,7 +134,7 @@ Contributors For This Release
     of Banshee. Without their help, there would be no release!
 
      Andres G. Aragoneses, Andrey Gankov, Bertrand Lorentz, Chow Loong Jin,
-     Dmitriy PetukhovFrank, Frank Ziegler, Marcin Kolny, Michael Catanzaro,
+     Dmitriy Petukhov, Frank Ziegler, Marcin Kolny, Michael Catanzaro,
      Michael Foster, Michał Sawicz, Mirco Bauer, Nicholas Little, Olivier
      Dufour, Phil Trimble, Roderich Schupp Sebastian Dröge, Stephan
      Sundermann
