--- a/README
+++ b/README
@@ -24,6 +24,7 @@ acceptable; higher versions are fine.
 - Required
   * Mono                2.8.2
   * SQlite              3.4
+  * GStreamerSharp      0.99.0
   * GStreamer           1.0.0
   * Gtk#                2.99.1
   * GLib                2.22
