Updated Basque language

--- a/po/eu.po
+++ b/po/eu.po
@@ -5832,14 +5832,12 @@ msgid "Enable song reporting From Device"
 msgstr "Gaitu abestien berri ematea gailutik"
 
 #: ../src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:450
-#, fuzzy
 msgid "Scrobbling to Last.FM"
-msgstr "Hasi saioa Last.fm-en"
+msgstr "Last.fm-ra izena igortzea"
 
 #: ../src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:451
-#, fuzzy
 msgid "Scrobbling to Last.FM..."
-msgstr "Last.fm-ra konektatzen."
+msgstr "Last.fm-ra izena igortzea..."
 
 #: ../src/Extensions/Banshee.Lastfm/Banshee.Lastfm/LastfmActions.cs:66
 msgid "Connect"
