--- a/po/eu.po
+++ b/po/eu.po
@@ -1,16 +1,18 @@
-# translation of eu.po to Basque
+# Basque translation for banshee
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2008, 2009, 2010.
-# Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2010, 2014.
+# Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2010, 2014, 2015.
+# Edurne Labaka <elabaka@uzei.com>, 2015.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: eu\n"
+"Project-Id-Version: banshee stable-2.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=banshee&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2014-07-15 02:49+0000\n"
-"PO-Revision-Date: 2014-07-15 11:46+0200\n"
+"PO-Revision-Date: 2015-02-07 11:07+0100\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@zundan.com>\n"
 "Language-Team: Basque <librezale@librezale.org>\n"
 "Language: eu\n"
@@ -5699,11 +5701,11 @@ msgstr "Gaitu abestien berri ematea gailutik"
 
 #: ../src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:402
 msgid "Scrobbling from device"
-msgstr ""
+msgstr "Gailutik jakinaraztea"
 
 #: ../src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:403
 msgid "Scrobbling from device..."
-msgstr ""
+msgstr "Gailutik jakinarazten..."
 
 #: ../src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:414
 #, csharp-format
