--- a/po/fr.po
+++ b/po/fr.po
@@ -23,7 +23,7 @@ msgstr ""
 "PO-Revision-Date: 2013-02-18 23:06+0100\n"
 "Last-Translator: Pierre Henry <pierrehenry73@yahoo.fr>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
