Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -17,7 +17,7 @@
 #
 # 5) Tradueixo "rating" per "valoració" i "score" per "puntuació"
 #
-# 6) Tradueixo "gapless" per "sense salts". Es refereix a l'espai buit entre cançons.
+# 6) Tradueixo "gapless" per "sense espais". Es refereix a l'espai buit entre cançons.
 #
 # 7) No tradueixo «scrobbling» de moment (When Last.fm automatically sends the name of each song played by audio player)
 #
@@ -766,7 +766,7 @@ msgstr ""
 #: ../src/Backends/Banshee.GStreamer/Banshee.GStreamer/PlayerEngine.cs:896
 #: ../src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp/PlayerEngine.cs:1058
 msgid "Enable _gapless playback"
-msgstr "Ha_bilita el mode de reproducció sense salts"
+msgstr "Ha_bilita el mode de reproducció sense espais"
 
 #: ../src/Backends/Banshee.GStreamer/Banshee.GStreamer/PlayerEngine.cs:897
 #: ../src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp/PlayerEngine.cs:1059
