Updated Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: banshee\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-08-19 17:34+0200\n"
-"PO-Revision-Date: 2016-08-19 17:35+0200\n"
+"POT-Creation-Date: 2016-09-06 04:49+0200\n"
+"PO-Revision-Date: 2016-09-06 04:50+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -389,7 +389,7 @@ msgid ""
 "Browse and play music and videos shared over your local network using UPnP."
 msgstr ""
 "Przeglądanie i słuchanie muzyki oraz nagrań wideo udostępnianych przez sieć "
-"lokalną używając UPnP."
+"lokalną za pomocą UPnP."
 
 #. ../src/Extensions/Banshee.Wikipedia/Banshee.Wikipedia.addin.xml
 #: ../data/addin-xml-strings.cs:177
@@ -2984,7 +2984,7 @@ msgstr "_Dodaj zakładkę"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui/BookmarkUI.cs:90
 msgid "Bookmark the Position in the Current Track"
-msgstr "Dodanie zakładki do aktualnego czasu bieżącej ścieżki"
+msgstr "Dodanie zakładki do obecnego czasu bieżącej ścieżki"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui/BookmarkUI.cs:103
 msgid "_Remove Bookmark"
@@ -4129,13 +4129,13 @@ msgstr "Zatrzymaj {0}"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/UserJobTile.cs:140
 msgid "This operation is still performing work. Would you like to stop it?"
-msgstr "Te działanie jest nadal w toku. Zatrzymać je?"
+msgstr "To działanie jest nadal wykonywane. Zatrzymać je?"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/UserJobTile.cs:142
 #, csharp-format
 msgid ""
 "The '{0}' operation is still performing work. Would you like to stop it?"
-msgstr "Działanie „{0}” jest nadal w toku. Zatrzymać je?"
+msgstr "Działanie „{0}” jest nadal wykonywane. Zatrzymać je?"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/UserJobTile.cs:146
 msgid "Continue"
@@ -6704,7 +6704,7 @@ msgstr "Dołącza zaznaczone utwory do kolejki po obecnie odtwarzanym utworze"
 
 #: ../src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueActions.cs:67
 msgid "Current Album"
-msgstr "Aktualny album"
+msgstr "Obecny album"
 
 #: ../src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueActions.cs:68
 msgid "Add selected songs to the play queue after the currently playing album"
@@ -6712,7 +6712,7 @@ msgstr "Dołącza zaznaczone utwory do kolejki po obecnie odtwarzanym albumie"
 
 #: ../src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueActions.cs:72
 msgid "Current Artist"
-msgstr "Aktualny wykonawca"
+msgstr "Obecny wykonawca"
 
 #: ../src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueActions.cs:73
 msgid "Add selected songs to the play queue after the currently playing artist"
@@ -6949,8 +6949,8 @@ msgid ""
 "If checked, Banshee will check every hour to see if this podcast has new "
 "episodes"
 msgstr ""
-"Po zaznaczeniu, program Banshee co godzinę będzie sprawdzał dostępność "
-"nowych odcinków"
+"Po zaznaczeniu program Banshee co godzinę będzie sprawdzał dostępność nowych "
+"odcinków"
 
 #: ../src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastManager/Dialog/PodcastFeedPropertiesDialog.cs:105
 #: ../src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastManager/Dialog/PodcastSubscribeDialog.cs:136
@@ -7359,11 +7359,11 @@ msgstr "Brak wystarczającej ilości treści do odtworzenia stacji."
 
 #: ../src/Libraries/Lastfm/Lastfm/RadioConnection.cs:302
 msgid "This group does not have enough members for radio."
-msgstr "Ta grupa nie posiada wystarczającej liczby członków dla radia."
+msgstr "Ta grupa nie ma wystarczającej liczby członków dla radia."
 
 #: ../src/Libraries/Lastfm/Lastfm/RadioConnection.cs:304
 msgid "This artist does not have enough fans for radio."
-msgstr "Ten wykonawca nie posiada wystarczającej liczby fanów dla radia."
+msgstr "Ten wykonawca nie ma wystarczającej liczby fanów dla radia."
 
 #: ../src/Libraries/Lastfm/Lastfm/RadioConnection.cs:306
 msgid "There are not enough neighbours for this station."
@@ -7390,8 +7390,7 @@ msgid ""
 "Your IP has made too many requests in a short period, exceeding our API "
 "guidelines"
 msgstr ""
-"Adres IP wysłał za dużo żądań w krótkim okresie czasu, przekraczając "
-"wskazania API"
+"Adres IP wysłał za dużo żądań w krótkim czasie, przekraczając wskazania API"
 
 #: ../src/Libraries/Lastfm/Lastfm/RadioConnection.cs:318
 msgid "There was an unknown error."
