Updated Spanish translation

--- a/help/es/es.po
+++ b/help/es/es.po
@@ -6,12 +6,12 @@
 # Ángel Sanz <mizo0mizo@gmail.com>, 2010, 2011.
 # Benjamín Valero Espinosa <benjavalero@gmail.com>, 2010, 2011, 2012.
 # Milagros Alessandra Infante Montero <maim92@gmail.com>, 2013.
-#
+# 
 # Daniel Mustieles <daniel.mustieles@gmail.com>, 2011, 2012, 2013, 2015.
 msgid ""
 msgstr ""
 "Project-Id-Version: banshee-help.master\n"
-"POT-Creation-Date: 2015-07-29 02:54+0000\n"
+"POT-Creation-Date: 2019-03-07 22:53+0000\n"
 "PO-Revision-Date: 2015-07-29 \n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Spanish <gnome-es-list@gnome.org>\n"
@@ -49,8 +49,8 @@ msgstr "Paul Cutler"
 #: C/play.page:15(email) C/play-queue.page:19(email)
 #: C/manage-tags.page:13(email) C/manage-playlists.page:13(email)
 #: C/lastfm.page:13(email) C/keyboard-shortcuts.page:11(email)
-#: C/introduction.page:11(email) C/index.page:12(email)
-#: C/import.page:13(email) C/extensions.page:12(email) C/amazon.page:12(email)
+#: C/introduction.page:11(email) C/index.page:12(email) C/import.page:13(email)
+#: C/extensions.page:12(email) C/amazon.page:12(email)
 msgid "pcutler@gnome.org"
 msgstr "pcutler@gnome.org"
 
@@ -64,8 +64,8 @@ msgstr "Aruna Sankaranarayanan"
 #: C/ui.page:17(email) C/sync.page:17(email) C/sort.page:17(email)
 #: C/search.page:17(email) C/radio.page:19(email) C/play.page:23(email)
 #: C/play-queue.page:14(email) C/lastfm.page:17(email)
-#: C/introduction.page:15(email) C/index.page:20(email)
-#: C/import.page:21(email) C/amazon.page:16(email)
+#: C/introduction.page:15(email) C/index.page:20(email) C/import.page:21(email)
+#: C/amazon.page:16(email)
 msgid "aruna.evam@gmail.com"
 msgstr "aruna.evam@gmail.com"
 
@@ -203,13 +203,13 @@ msgid ""
 "on managing a source."
 msgstr ""
 "La vista <gui>Colecciones</gui> en <app>Banshee</app> cambiará dependiendo "
-"de la fuente que haya elegido. La «Colección de música» mostrará la carátula, "
-"los artistas en su colección y lista de canciones. Por ejemplo, la colección "
-"<gui>Música</gui> mostrtará la portada, artistas en su colección y la lista "
-"de canciones de la colección <gui>Podcasts</gui> mostrará sus subscripciones "
-"a podcast, los podcast que ha descargado y los que no, y todos los podcast, "
-"nuevos o antiguos. Consulte la página de ayuda de cada fuente para obtener "
-"información detallada sobre cómo gestionar una fuente."
+"de la fuente que haya elegido. La «Colección de música» mostrará la "
+"carátula, los artistas en su colección y lista de canciones. Por ejemplo, la "
+"colección <gui>Música</gui> mostrtará la portada, artistas en su colección y "
+"la lista de canciones de la colección <gui>Podcasts</gui> mostrará sus "
+"subscripciones a podcast, los podcast que ha descargado y los que no, y "
+"todos los podcast, nuevos o antiguos. Consulte la página de ayuda de cada "
+"fuente para obtener información detallada sobre cómo gestionar una fuente."
 
 #: C/sync.page:9(desc)
 msgid "Sync your media to a portable media player or smartphone."
@@ -935,8 +935,8 @@ msgid ""
 msgstr ""
 "Se pueden encontrar podcasts sobre prácticamente cualquier tema, como "
 "música, películas, Linux y mucho más. Para encontrar podcasts en Internet, "
-"utilice su buscador preferido e introduzca términos como «podcast Linux» para "
-"encontrar un gran número de opciones donde elegir."
+"utilice su buscador preferido e introduzca términos como «podcast Linux» "
+"para encontrar un gran número de opciones donde elegir."
 
 #: C/podcast.page:50(title)
 msgid "Add a podcast"
@@ -1460,7 +1460,7 @@ msgstr ""
 "ya incrustados y si importa música desde CD, <app>Banshee</app> incluirá los "
 "metadatos al extraer música del CD si está disponible. Para obtener más "
 "información sobre cómo extraer música de CD e incluir los metadatos, "
-"consulte la <link xref=\"import\"/>."
+"consulte la sección <link xref=\"import\"/>."
 
 #: C/manage-tags.page:33(p)
 msgid ""
@@ -1688,14 +1688,6 @@ msgstr ""
 "específico, favoritos, etc."
 
 #: C/manage-playlists.page:82(p)
-#| msgid ""
-#| "To create a new Smart Playlist, from the menu choose <guiseq><gui style="
-#| "\"menu\">Media</gui><gui style=\"menuitem\">New Smart Playlist</gui></"
-#| "guiseq>. You will be presented with a dialog to create a new Smart "
-#| "Playlist. Enter the name of your playlist and then choose the criteria "
-#| "your playlist should be based on. You can choose from any field included "
-#| "in the song's meatadata, such as Album, Artist or Year. Choose the "
-#| "criteria and then choose from one of the following:"
 msgid ""
 "To create a new Smart Playlist, from the menu choose <guiseq><gui style="
 "\"menu\">Media</gui><gui style=\"menuitem\">New Smart Playlist</gui></"
@@ -1775,12 +1767,6 @@ msgstr ""
 "el número de canciones que se incluirán."
 
 #: C/manage-playlists.page:122(p)
-#| msgid ""
-#| "<app>Banshee</app> also includes smart playlists already created for you. "
-#| "Press the <gui style=\"button\">Open in editor</gui> button to view how "
-#| "the playlist created was or to modify it. If you press <gui style=\"button"
-#| "\">Create and save</gui> the playlist will be automatically generated and "
-#| "saved for you. The following playlists are included:"
 msgid ""
 "<app>Banshee</app> also includes smart playlists already created for you. "
 "Press the <gui style=\"button\">Open in editor</gui> button to view how the "
@@ -2297,10 +2283,6 @@ msgstr ""
 "gestionarse como cualquier otro archivo multimedia en <app>Banshee</app>."
 
 #: C/import.page:32(p)
-#| msgid ""
-#| "To import music or video files on your computer, choose <guiseq><gui "
-#| "style=\"menu\">Media</gui><gui style=\"menuitem\">Import Media</gui></"
-#| "guiseq>. A dialog wil appear with a number of choices."
 msgid ""
 "To import music or video files on your computer, choose <guiseq><gui style="
 "\"menu\">Media</gui><gui style=\"menuitem\">Import Media</gui></guiseq>. A "
@@ -2579,7 +2561,7 @@ msgstr ""
 #~ "<link xref=\"adv-search\"/> page."
 #~ msgstr ""
 #~ "Para obtener más información sobre cómo realizar consultas de búsqueda "
-#~ "más complejas, consulte la <link xref=\"adv-search\"/>"
+#~ "más complejas, consulte la sección <link xref=\"adv-search\"/>"
 
 #~ msgid "Aruna S"
 #~ msgstr "Aruna S"
